--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "npx mocha --parallel --exit test/",
     "test:dev": "npx mocha test/ -w",
     "test:cov": "npx nyc --reporters=html,text npm test"
-
   },
   "repository": {
     "type": "git",
@@ -20,6 +19,7 @@
   },
   "homepage": "https://github.com/Jeremias333/tdd-nodejs#readme",
   "dependencies": {
+    "lokijs": "^1.5.12",
     "mocha": "^8.4.0",
     "nyc": "^15.1.0",
     "sinon": "^9.2.4"
